# AgentProxy

./: .env.example  .gitignore  README.md  async_test.py  main.py  prompts.yaml  pyproject.toml  requirements.txt
agent/: __init__.py  base.py  email.py  email_agent.py  finance_agent.py  router_agent.py  supreme_agent.py
agentproxy/: __init__.py  cli.py  prompts.yaml
agentproxy/agent/: __init__.py  base.py  email_agent.py  finance_agent.py  router_agent.py
agentproxy/config/: logger.py  settings.py
agentproxy/graph/: __init__.py  orchestrator.py  perceive.py  state.py
agentproxy/interfaces/: discord_server.py
config/: settings.py
graph/: orchestrator.py  state.py  test.py
interfaces/: discord_server.py
tests/: test_agents.py
